--- a/SeamenResto/Views/Order/Create.cshtml
+++ b/SeamenResto/Views/Order/Create.cshtml
@@ -44,7 +44,7 @@
             <div class="card-footer">
                 <center>
                     <button type="submit" class="btn btn-primary">Create Order</button>
-                    <a asp-action="Index" asp-controller="Orders" class="btn btn-Secondary">
+                    <a asp-action="Index" asp-controller="Order" class="btn btn-Secondary">
                         Cancel
                     </a>
                 </center>
