--- a/SeamenResto/Views/Order/Update.cshtml
+++ b/SeamenResto/Views/Order/Update.cshtml
@@ -3,15 +3,13 @@
     ViewData["Title"] = "Edit Order";
 }
 
-<form asp-action="UpdateOrder" asp-controller="Order" method="post">
+<form id="editOrderForm" asp-action="UpdateOrder" asp-controller="Order" method="post">
     @Html.AntiForgeryToken()
     <input type="hidden" name="_method" value="PUT" />
     <div class="row">
         <div class="col-lg-12">
-
             <div class="form-group">
-                <label>Id</label>
-                <input asp-for="Id" type="text" class="form-control" readonly>
+                <input asp-for="Id" type='hidden' class="form-control" readonly>
             </div>
 
             <div class="form-group">
@@ -49,3 +47,12 @@
         </div>
     </div>
 </form>
+
+<script>
+    document.getElementById('editOrderForm').addEventListener('submit', function(event) {
+        var confirmed = confirm("Are you sure you want to edit this order?");
+        if (!confirmed) {
+            event.preventDefault(); // Prevent the form from submitting
+        }
+    });
+</script>
