--- a/SeamenResto/Views/Order/index.cshtml
+++ b/SeamenResto/Views/Order/index.cshtml
@@ -3,47 +3,123 @@
     ViewData["Title"] = "Orders";
 }
 
-<h2>Orders</h2>
-<br>
+<h2>Order Informations</h2>
+
 <div>
-    <div class="col-md-12">
+    <div class="CreateOrderBttn">
         <a asp-action="Create" asp-controller="Order" class="btn btn-success">Create Order</a>
     </div>
 </div>
-<div>
-    <div class="col-md-12">
-        <table class="table">
+<div class="">
+    <div class="">
+        <table class="table table-striped">
             <thead>
-                <tr>
-                    <td>Id</td>
-                    <td>CustomerName</td>
+                <tr style="background-color: black; color: white;">
+                    <td>Name</td>
                     <td>Order</td>
-                    <td>Quantity</td>
-                    <td>Price</td>
                     <td>Total</td>
-                    <td>Update Action</td>
-                    <td>Delete Action</td>
+                    <td>Actions</td>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td>@item.Id</td>
+                    <tr >
                         <td>@item.CustomerName</td>
                         <td>@item.Order</td>
-                        <td>@item.Quantity</td>
-                        <td>@item.Price</td>
                         <td>@item.Total</td>
                         <td>
-                            <a asp-action="Update" asp-controller="Order" asp-route-id="@item.Id" class="btn btn-success">Update Order</a>
-                        </td>
-                        <td>
-                            <a asp-action="Delete" asp-controller="Order" asp-route-id="@item.Id" class="btn btn-danger">Delete Order</a>
+                            <div class="dropdown">
+                                <button class="NavMenuAction" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+                                </button>
+                                <div class="dropdown-menu dropdown-menu-right" style="background-color: rgb(197, 197, 197);" aria-labelledby="dropdownMenuButton">
+                                    <a class="dropdown-item update-link" href="@Url.Action("Update", "Order", new { id = item.Id })">
+                                        <img src="https://www.svgrepo.com/show/509911/edit.svg"/>
+                                    </a>
+                                    <a class="dropdown-item delete-link" href="@Url.Action("Delete", "Order", new { id = item.Id })" onclick="return TriggerAlert();">
+                                        <img src="https://www.svgrepo.com/show/533024/trash-xmark.svg"/>
+                                    </a>
+                                </div>
+                            </div>
                         </td>
                     </tr>
                 }
             </tbody>
         </table>
+
     </div>
 </div>
+
+<script>
+    function TriggerAlert() {
+        return confirm("Are you sure you want to delete this order?");
+    }
+</script>
+
+<style>
+   .CreateOrderBttn{
+        display: flex;
+        margin-bottom: 0.3rem;
+        justify-content: end;
+    }
+    .NavMenuAction{
+        height: 1.5rem;
+        width: 1.5rem;
+        background-image: url('https://www.svgrepo.com/show/524954/settings.svg');
+        background-size: 20px 20px; /* Adjust the size as needed */
+        background-repeat: no-repeat;
+        background-position: center;
+        background-color: inherit;
+        border: 0;
+        border-radius: 0.3rem; 
+    }
+    .update-link{
+        background-color: rgb(6, 224, 6);
+        outline:solid 0.1rem black;
+        display: flex; 
+        justify-content: center; 
+        border-radius: 0.3rem; 
+        width: 8rem; 
+        margin-left: 1rem; 
+        margin-right: 1rem; 
+        margin-bottom: 0.44rem;
+    }
+    .update-link img{
+        width: 1.5rem;
+        height: 1.5rem
+    }
+    .update-link:hover {
+        background-color: green;
+        color: white; /* Optional: Change text color to white */
+    }
+    .delete-link{
+        background-color: rgb(255, 0, 0);
+        outline:solid 0.1rem black;
+        display: flex; 
+        justify-content: center; 
+        border-radius: 0.3rem; 
+        width: 8rem; 
+        margin-left: 1rem; 
+        margin-right: 1rem; 
+        margin-bottom: 0.1rem
+    }
+    .delete-link img{
+        width: 1.5rem;
+        height: 1.5rem
+    }
+    .delete-link:hover {
+        background-color: rgb(177, 0, 0);
+        color: white; /* Optional: Change text color to white */
+    }
+    .dropdown-menu-right {
+        right: auto;
+        left: 0;
+    }
+
+</style>
+
+@section Scripts {
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+}
