--- a/SeamenResto/Views/Order/Create.cshtml
+++ b/SeamenResto/Views/Order/Create.cshtml
@@ -1,57 +1,68 @@
-@model OrderEntity
+@model SeamenResto.Models.OrderEntity
 @{
     ViewData["Title"] = "Add new Order";
 }
 
-<form asp-action="CreateOrder" asp-controller="Order" method="post">
+<form asp-action="CreateOrder" asp-controller="Order" method="post" enctype="multipart/form-data" id="orderForm">
     <div class="row">
         <div class="col-lg-12">
             <div class="form-group">
-                <label>
-                    CustomerName
-                </label>
+                <label>CustomerName</label>
                 <input asp-for="CustomerName" type="text" class="form-control" required>
             </div>
 
             <div class="form-group">
-                <label>
-                    Order
-                </label>
+                <label>Order</label>
                 <input asp-for="Order" type="text" class="form-control" required>
             </div>
 
             <div class="form-group">
-                <label>
-                    Quantity
-                </label>
+                <label>Quantity</label>
                 <input asp-for="Quantity" type="number" class="form-control" required>
             </div>
 
             <div class="form-group">
-                <label>
-                    Price
-                </label>
+                <label>Price</label>
                 <input asp-for="Price" type="number" class="form-control" required>
             </div>
 
             <div class="form-group">
-                <label>
-                    Total
-                </label>
+                <label>Total</label>
                 <input asp-for="Total" type="number" class="form-control" required>
             </div>
+            <br>
+            <label for="image">Choose an image to upload:</label>
+            <br>
+            <input type="file" id="image" name="image" accept="image/*" required>
+            <br><br>
+
+            <!-- Hidden input to store the Base64 string -->
+            <input type="hidden" id="imageBase64" name="Img" />
 
             <div class="card-footer">
                 <center>
                     <button type="submit" class="btn btn-primary">Create Order</button>
-                    <a asp-action="Index" asp-controller="Order" class="btn btn-Secondary">
-                        Cancel
-                    </a>
+                    <a asp-action="Index" asp-controller="Order" class="btn btn-secondary">Cancel</a>
                 </center>
-                
             </div>
-
         </div>
     </div>
-
 </form>
+
+<script>
+    document.getElementById('orderForm').addEventListener('submit', function (event) {
+        var imageInput = document.getElementById('image');
+        var file = imageInput.files[0];
+
+        if (file) {
+            var reader = new FileReader();
+            reader.onloadend = function () {
+                var base64String = reader.result.split(',')[1];
+                document.getElementById('imageBase64').value = base64String;
+                document.getElementById('orderForm').submit();
+            };
+            reader.readAsDataURL(file);
+            event.preventDefault(); // Prevent the form from submitting until the image is converted
+        }
+    });
+</script>
