--- a/SeamenResto/Views/Order/index.cshtml
+++ b/SeamenResto/Views/Order/index.cshtml
@@ -12,23 +12,27 @@
 </div>
 <div class="">
     <div class="">
-        <table class="table table-striped">
+        <table class="table table-striped" style="border: solid 1px;">
             <thead>
                 <tr style="background-color: black; color: white;">
-                    <td>Name</td>
-                    <td>Order</td>
-                    <td>Total</td>
-                    <td>Actions</td>
+                    <td class="text-center" style="border: solid 1px;">Name</td>
+                    <td class="text-center" style="border: solid 1px;">Image</td>
+                    <td class="text-center" style="border: solid 1px;">Order</td>
+                    <td class="text-center" style="border: solid 1px;">Total</td>
+                    <td class="text-center" style="border: solid 1px;">Actions</td>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr >
-                        <td>@item.CustomerName</td>
-                        <td>@item.Order</td>
-                        <td>@item.Total</td>
-                        <td>
+                    <tr>
+                        <td class="text-center" style="border: solid 1px; padding-top: 2rem;">@item.CustomerName</td>
+                        <td class="ImgCell">
+                            <img src="@item.Img"/>
+                        </td>
+                        <td class="text-center" style="border: solid 1px; padding-top: 2rem;">@item.Order</td>
+                        <td class="text-center" style="border: solid 1px; padding-top: 2rem;">@item.Total</td>
+                        <td class="text-center" style="padding-top: 2rem;">
                             <div class="dropdown">
                                 <button class="NavMenuAction" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 
@@ -51,6 +55,7 @@
     </div>
 </div>
 
+
 <script>
     function TriggerAlert() {
         return confirm("Are you sure you want to delete this order?");
@@ -58,6 +63,20 @@
 </script>
 
 <style>
+    .ActionCell{
+        
+    }
+    .ImgCell{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: none;
+    }
+    .ImgCell img{
+        height: 4.5rem;
+        border-radius: 1rem;
+
+    }
    .CreateOrderBttn{
         display: flex;
         margin-bottom: 0.3rem;
