--- a/SeamenResto/Views/Order/Update.cshtml
+++ b/SeamenResto/Views/Order/Update.cshtml
@@ -1,9 +1,9 @@
-@model OrderEntity
+@model SeamenResto.Models.OrderEntity
 @{
     ViewData["Title"] = "Edit Order";
 }
 
-<form id="editOrderForm" asp-action="UpdateOrder" asp-controller="Order" method="post">
+<form id="editOrderForm" asp-action="UpdateOrder" asp-controller="Order" method="post" enctype="multipart/form-data">
     @Html.AntiForgeryToken()
     <input type="hidden" name="_method" value="PUT" />
     <div class="row">
@@ -37,22 +37,45 @@
                 <input asp-for="Total" type="number" class="form-control" required>
             </div>
 
+            <div class="form-group">
+                <label for="image">Choose an image to upload:</label>
+                <br>
+                <input type="file" id="image" name="image" accept="image/*">
+                <br><br>
+
+                <!-- Hidden input to store the Base64 string -->
+                <input type="hidden" id="imageBase64" name="Img" value="@Model.Img" />
+            </div>
+
             <div class="card-footer">
                 <center>
                     <button type="submit" class="btn btn-primary">Edit Order</button>
                     <a asp-action="Index" asp-controller="Order" class="btn btn-secondary">Cancel</a>
                 </center>
             </div>
-
         </div>
     </div>
 </form>
 
 <script>
     document.getElementById('editOrderForm').addEventListener('submit', function(event) {
-        var confirmed = confirm("Are you sure you want to edit this order?");
-        if (!confirmed) {
-            event.preventDefault(); // Prevent the form from submitting
+        var imageInput = document.getElementById('image');
+        var file = imageInput.files[0];
+
+        if (file) {
+            var reader = new FileReader();
+            reader.onloadend = function() {
+                var base64String = reader.result.split(',')[1];
+                document.getElementById('imageBase64').value = base64String;
+                document.getElementById('editOrderForm').submit();
+            };
+            reader.readAsDataURL(file);
+            event.preventDefault(); // Prevent the form from submitting until the image is converted
+        } else {
+            var confirmed = confirm("Are you sure you want to edit this order?");
+            if (!confirmed) {
+                event.preventDefault(); // Prevent the form from submitting
+            }
         }
     });
 </script>
